# MoonChildFE

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Classes/framewrk/: frm_int.hpp  video.cpp
Classes/moonchild/: globals.cpp  globals.hpp  mc.cpp  mc.hpp  score.cpp  sound.cpp
Itch/: MoonChildFE.html
Libraries/glad/: glad.c  glad.h
Platform/App/: Host.cpp  PlatformBackends.cpp  Resources.cpp
Platform/Backends/Audio/: DreamcastAudio.cpp  DreamcastAudio.h
Platform/Backends/Input/: DreamcastInput.cpp  DreamcastInput.h  SDL3Input.cpp
Platform/Backends/Renderer/: DreamcastRenderer.cpp  DreamcastRenderer.h  GLESRenderer.cpp  GLESRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h
Platform/Backends/Window/: DreamcastWindow.cpp  DreamcastWindow.h  SDL3Window.cpp  SDL3Window.h
Platform/Bridges/: InputBridge.cpp  MovieBridge.cpp
Platform/Core/: IAudio.h  IGLSurface.h
Scripts/: RegenerateGlad.bat
